--- a/src/css/_variable.scss
+++ b/src/css/_variable.scss
@@ -1,6 +1,8 @@
 $blue:                      #52dfee;
 $violet:                    #30219f;
+$darkblue:                  #341eb1;
 $black:                     #343434;
+$grey:                      #525154;
 
 $link-color:                #52dfee !default;
 $link-decoration:           none !default;
