--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&subset=cyrillic');
 
 @import "variable.scss";
+@import "buttons.scss";
 
 @import "node_modules/bootstrap/scss/vendor/_rfs.scss";
 @import "node_modules/bootstrap/scss/mixins/_hover.scss";
 @import "node_modules/bootstrap/scss/mixins/_breakpoints.scss";
+@import "node_modules/bootstrap/scss/utilities/_flex.scss";
 
 @import "node_modules/bootstrap/scss/mixins/_grid-framework.scss";
 @import "node_modules/bootstrap/scss/mixins/_grid.scss";
@@ -23,10 +25,13 @@ html {
 *::after {
     box-sizing: inherit;
 }
-
-a,a:hover,a:focus{
+a{
+    display: inline-block;
     outline: none;
     transition: .3s;
+    &:hover, &:focus{
+        outline: none;
+    }
 }
 
 .text-right{
@@ -45,6 +50,8 @@ a,a:hover,a:focus{
     left: 0;
     width: 100%;
     z-index: 11;
+    overflow: hidden;
+
     padding-top: 80px;
     &__email{
         font-weight: 700;
@@ -78,6 +85,8 @@ a,a:hover,a:focus{
         right: 0;
         min-height: 100vh;
 
+        transform: translateX(100%);
+
         display: inline-block;
 
         color: $black;
@@ -105,8 +114,148 @@ a,a:hover,a:focus{
 
 .content{
     position: relative;
+    .heading{
+        font-weight: 700;
+        & + .offer{
+            margin-top: 40px;
+        }
+    }
+    .offer{
+        font-size: 16px;
+        line-height: 26px;
+        color: $grey;
+    }
+    &__btn{
+        margin: 60px 0 50px;
+        &__link{
+            display: inline-block;
+            font-size: 16px;
+            font-weight: 700;
+            text-align: center;
+            border-radius: 30px;
+            padding: 14px 40px 16px; 
+
+            margin-right: 15px;
+            margin-bottom: 15px;
+
+            color: #fff;
+            background: linear-gradient( -45deg, rgb(50,43,143) 0%, rgb(63,36,166) 62%, rgb(76,28,188) 100%);
+
+            &:hover{
+                color: $blue;
+                text-decoration: none;
+            }
+        }
+    }
+
     &_title{
         background: linear-gradient(45deg, #2b248a 0%, #361cbc 100%);
-        min-height: 100vh;
+        padding: 300px 0 120px;
+        &__svg{
+            position: absolute;
+            left: 0;
+            top: 0;
+            width:100%;
+            height:520px;
+            #filter_0{
+                width:100%;
+                height:520px;
+            }
+        }
+        .heading{
+            padding-left: 40px;
+            color: #fff;
+            font-size: 64px;
+            line-height: 72px;
+            margin-bottom: 100px;
+        }
+        .btn{
+            margin-left: 40px;
+        }
+    }
+    &_section{
+        padding: 100px 0;
+        .heading{
+            font-size: 54px;
+            line-height: 60px;
+            color:$grey;
+            .heading-color{
+                color:$darkblue;
+            }
+        }
+        .toggle-tabs{
+            margin-top: 60px;
+        }
+    }
+    &_portfolio{
+        padding: 100px 0 300px;
+        background: url("../images/bg_portfolio.svg") no-repeat center bottom/ cover;
+        .heading{
+            font-size: 64px;
+            line-height: 72px;
+            color: #fff;
+        }
+        &__link{
+            text-transform: uppercase;
+            padding-top: 42px;
+        }
+        .portfolio{
+            margin-left: 100px;
+            overflow-x: scroll;
+        }
+    }
+}
+.toggle-tabs{
+    &__item{
+        position: relative;
+        padding-left: 40px;
+        margin-bottom: 20px;
+        &__title{
+            font-weight: 700;
+            color: $grey;
+            margin-bottom: 10px;
+
+            transition: .3s;
+            cursor: pointer;
+            &:before{
+                content: '';
+                display: block;
+
+                width: 20px;
+                height: 20px;
+                border-radius: 50%;
+
+                background: $darkblue;
+
+                position: absolute;
+                left: 0;
+                top: 0;
+            }
+            &:hover{
+                color:$darkblue;
+            }
+        }
+        &__content{
+            display: none;
+            color: #858585;
+        }
+    }
+}
+.portfolio{
+    .row{
+        flex-wrap: nowrap;
+    }
+    margin-top: 80px;
+    &__title{
+        display: block;
+        color: #fff;
+        text-transform: uppercase;
+        text-align: right;
+        font-weight: 600;
+        margin-bottom: 20px;
+    }
+    &__image{
+        max-width: 100%;
+        margin-bottom: 40px;
     }
 }
