--- a/src/index.pug
+++ b/src/index.pug
@@ -4,4 +4,92 @@ html(lang="ru", dir="ltr")
         script(src="./js/jquery.min.js")
         include chunks/header.pug
         .content.content_title
+            svg.content_title__svg(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink")
+                defs
+                    filter(filterUnits="userSpaceOnUse" id="Filter_0" x="0px" y="0px")
+                        feOffset(in="SourceAlpha" dx="0" dy="3")
+                        feGaussianBlur(result="blurOut" stdDeviation="10")
+                        feFlood(flood-color="rgb(53, 41, 148)" result="floodOut")
+                        feComposite(operator="atop" in="floodOut" in2="blurOut")
+                        feComponentTransfer
+                            feFuncA(type="linear" slope="0.1")
+                        feMerge
+                            feMergeNode
+                            feMergeNode(in="SourceGraphic")
+                    linearGradient(id="PSgrad_0" x1="0%" x2="0%" y1="100%" y2="0%")
+                        stop(offset="0%" stop-color="rgb(76,28,188)" stop-opacity="1")
+                        stop(offset="100%" stop-color="rgb(51,42,145)" stop-opacity="1")
+                g(filter="url(#Filter_0)")
+                    path(fill-rule="evenodd" d="M1952.000,0.000 L32.000,0.000 C32.000,0.000 32.455,36.594 32.455,62.261 C48.455,87.927 227.239,217.781 370.380,209.418 C543.886,199.297 539.967,119.636 732.975,108.649 C895.861,99.358 895.062,345.632 945.000,414.000 C1039.188,542.961 1243.446,475.024 1406.000,401.000 C1458.954,376.881 1673.736,238.965 1716.000,215.000 C1805.329,164.347 1952.000,205.000 1952.000,205.000 L1952.000,0.000 Z")
+                path(fill="url(#PSgrad_0)" d="M1952.000,0.000 L0.000,0.000 C0.000,0.000 0.000,0.000 0.000,62.261 C48.455,87.927 227.239,217.781 370.380,209.418 C543.886,199.297 539.967,119.636 732.975,108.649 C895.861,99.358 895.062,345.632 945.000,414.000 C1039.188,542.961 1243.446,475.024 1406.000,401.000 C1458.954,376.881 1673.736,238.965 1716.000,215.000 C1805.329,164.347 1952.000,205.000 1952.000,205.000 L1952.000,0.000 Z")
+            .container
+                .row
+                    .col-xl-6.offset-xl-1.align-items-center
+                        h1.heading Разработка. Реклама. Продвижение. Маркетинг продаж.
+                        a.btn.btn_primary(href="#") обсудим проект?
+        .content.content_section
+            .container
+                .row
+                    .col-xl-6
+                        h2.heading От разработки 
+                            span.heading-color до первых клиентов 
+                            | всего 10 дней
+                        p.offer Занимаемся любимым делом более 5 лет, поэтому не просто делаем и продвигаем сайты. Мы&nbsp;заинтересованы в&nbsp;вашем росте. Поверьте, мы болеем за&nbsp;ваш проект так&nbsp;же, как&nbsp;и&nbsp;вы, поэтому тщательно прорабатываем все детали, чтобы сайт нравился не&nbsp;только вам, но и&nbsp;потребителю. Обращаясь&nbsp;к&nbsp;нам, вы&nbsp;получаете соратников, которые знают короткий путь к&nbsp;сердцам ваших покупателей. 
+                        .content__btn
+                            a.content__btn__link(href="#") Веб-дизайн
+                            a.content__btn__link(href="#") SEO продвижение
+                            a.content__btn__link(href="#") Контекстная реклама
+                            a.content__btn__link(href="#") Разработка сайта
+                            a.content__btn__link(href="#") Маркетинг продаж
+                            a.content__btn__link(href="#") Создание контента
+                    .col-xl-5.offset-xl-3
+                        p.offer Сроки для нас — не пустой звук. Мы четко выстраиваем работу, чтобы ваш бизнес начал приносить прибыль как можно скорее. Вы всегда будете в курсе процесса и сможете понимать на каком этапе реализация проекта.
+                    .col-xl-6.offset-xl-3
+                        h3.heading У вас будут 
+                            span.heading-color преимущества
+                        .toggle-tabs
+                            .toggle-tabs__item
+                                .toggle-tabs__item__title Бизнес на любом устройстве 
+                                .toggle-tabs__item__content Создаём сайт, который прекрасно выглядит и функционирует на любом размере экрана: мобильный телефон, планшет и компьютер.
+                            .toggle-tabs__item
+                                .toggle-tabs__item__title Digital маркетинг
+                                .toggle-tabs__item__content Позволяет управлять вниманием и поведением пользователей
+                            .toggle-tabs__item
+                                .toggle-tabs__item__title Концепция
+                                .toggle-tabs__item__content Продуманная и выдержанная направленность, соответствующая тематике сайта
+                            .toggle-tabs__item
+                                .toggle-tabs__item__title Воронка продаж
+                                .toggle-tabs__item__content Сайт будет содержать все необходимые блоки для совершения продаж
+                            .toggle-tabs__item
+                                .toggle-tabs__item__title Гармоничный контент
+                                .toggle-tabs__item__content Только качественный и релевантный контент может обеспечить большие продажи и первые места в поисковых системах
+                            .toggle-tabs__item
+                                .toggle-tabs__item__title Работающий дизайн
+                                .toggle-tabs__item__content ---------------------------
+        .content.content_portfolio
+            .container
+                .row
+                    .col-xl-5
+                        h4.heading Реализованные 
+                            a(href="#") проекты
+                    .col-xl-3.offset-xl-2
+                        a.content_portfolio__link(href="#") все проекты здесь >  
+                .portfolio
+                    .row  
+                        .col-md-3
+                            a.portfolio__title(href="#") #Логотип
+                            a(href="#")
+                                img.portfolio__image(src="./images/01.png")
+                        .col-md-3
+                            a.portfolio__title(href="#") #Веб-разработка
+                            a(href="#")
+                                img.portfolio__image(src="./images/02.png")
+                        .col-md-3
+                            a.portfolio__title(href="#") #Реклама
+                            a(href="#")
+                                img.portfolio__image(src="./images/03.png")
+                        .col-md-3
+                            a.portfolio__title(href="#") #Реклама
+                            a(href="#")
+                                img.portfolio__image(src="./images/03.png")
         include chunks/footer.pug
