--- a/src/css/_buttons.scss
+++ b/src/css/_buttons.scss
@@ -4,6 +4,7 @@
     font-weight: 700;
     text-align: center;
     text-transform: uppercase;
+    border: none;
     border-radius: 30px;
     padding: 20px 40px;
 
