--- a/src/css/_variable.scss
+++ b/src/css/_variable.scss
@@ -3,6 +3,7 @@ $violet:                    #30219f;
 $darkblue:                  #341eb1;
 $black:                     #343434;
 $grey:                      #525154;
+$lightgrey:                 #858585;
 
 $link-color:                #52dfee !default;
 $link-decoration:           none !default;
