--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -2,6 +2,12 @@
 
 @import "variable.scss";
 @import "buttons.scss";
+@import "form.scss";
+@import "toggle-tabs.scss";
+@import "header.scss";
+@import "footer.scss";
+@import "blog.scss";
+@import "portfolio.scss";
 
 @import "node_modules/bootstrap/scss/vendor/_rfs.scss";
 @import "node_modules/bootstrap/scss/mixins/_hover.scss";
@@ -19,7 +25,6 @@ html {
     box-sizing: border-box;
     -ms-overflow-style: scrollbar;
 }
-
 *,
 *::before,
 *::after {
@@ -33,84 +38,10 @@ a{
         outline: none;
     }
 }
+.text-right{text-align: right;}
+.text-center{text-align: center;}
+.text-left{text-align: left;}
 
-.text-right{
-    text-align: right;
-}
-.text-center{
-    text-align: center;
-}
-.text-left{
-    text-align: left;
-}
-
-.header{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 11;
-    overflow: hidden;
-
-    padding-top: 80px;
-    &__email{
-        font-weight: 700;
-        margin-left: 40px;
-    }
-    &__logo{
-        width: 75px;
-        max-width: 100%;
-        &__path{
-            fill: #fff;
-        }
-    }
-    &__nav{
-        width: 70px;
-        padding: 20px;
-        border-radius: 50%;
-        background: rgba(242, 242, 242, 0.1);
-        box-shadow: 0px 3px 6px 0px rgba(34, 0, 112, 0.004);
-        transition: .5s;
-        cursor: pointer;
-        &__path{
-            fill: #fff;
-        }
-        &:hover{
-            background: rgba(242, 242, 242, 0.2);
-        }
-    }
-    .nav{
-        position: absolute;
-        top: 0;
-        right: 0;
-        min-height: 100vh;
-
-        transform: translateX(100%);
-
-        display: inline-block;
-
-        color: $black;
-        background: #f2f2f2;
-        padding: 30px 40px;
-
-        .header__navbar{
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            &__link{
-                font-weight: 500;
-                color: $black;
-                &:hover{
-                    color: $violet;
-                    text-decoration: none;
-                }
-            }
-            &__item{
-                padding: 10px 0;
-            }
-        }
-    }
-}
 
 .content{
     position: relative;
@@ -147,10 +78,10 @@ a{
             }
         }
     }
-
+    /* INDEX PAGE BLOCK */
     &_title{
         background: linear-gradient(45deg, #2b248a 0%, #361cbc 100%);
-        padding: 300px 0 120px;
+        padding: 260px 0 120px;
         &__svg{
             position: absolute;
             left: 0;
@@ -161,6 +92,13 @@ a{
                 width:100%;
                 height:520px;
             }
+        }
+        &__elements{
+            position: absolute;
+            bottom: -150px;
+            right: 0px;
+            width: 750px;
+            height: 750px;
         }
         .heading{
             padding-left: 40px;
@@ -188,12 +126,23 @@ a{
         }
     }
     &_portfolio{
+        z-index: 2;
         padding: 100px 0 300px;
-        background: url("../images/bg_portfolio.svg") no-repeat center bottom/ cover;
+        background: #222222 url("../images/bg_portfolio.svg") no-repeat center bottom/ cover;
+        &__elements{
+            position: absolute;
+            top: 160px;
+            left: 0px;
+            width: 460px;
+            height: 460px;
+        }
         .heading{
             font-size: 64px;
             line-height: 72px;
             color: #fff;
+            &__link{
+                color: #fff;
+            }
         }
         &__link{
             text-transform: uppercase;
@@ -204,58 +153,43 @@ a{
             overflow-x: scroll;
         }
     }
-}
-.toggle-tabs{
-    &__item{
-        position: relative;
-        padding-left: 40px;
-        margin-bottom: 20px;
-        &__title{
-            font-weight: 700;
-            color: $grey;
-            margin-bottom: 10px;
-
-            transition: .3s;
-            cursor: pointer;
-            &:before{
-                content: '';
-                display: block;
-
-                width: 20px;
-                height: 20px;
-                border-radius: 50%;
-
-                background: $darkblue;
-
-                position: absolute;
-                left: 0;
-                top: 0;
+    &_contact{
+        background: #222222;
+        padding: 340px 0 100px;
+        margin-top: -300px;
+        z-index: 1;
+        .heading{
+            font-size: 46px;
+            line-height: 52px;
+            color:#fff;
+        }
+        .offer{
+            font-size: 14px;
+            line-height: 22px;
+            margin-top: 50px;
+        }
+        .form{
+            margin-top: 70px;
+            &_inline{
+                .input-text{
+                    float: left;
+                    width: calc(100% - 340px);
+                }
+                .btn{
+                    margin-left: 20px;
+                    width: 320px;
+                    max-width: 100%;
+                }
             }
-            &:hover{
-                color:$darkblue;
+            .input-text{
+                color: #fff;
+                background: #272727;
             }
         }
-        &__content{
-            display: none;
-            color: #858585;
-        }
     }
-}
-.portfolio{
-    .row{
-        flex-wrap: nowrap;
-    }
-    margin-top: 80px;
-    &__title{
-        display: block;
+    &.blog{
+        background: #272727;
         color: #fff;
-        text-transform: uppercase;
-        text-align: right;
-        font-weight: 600;
-        margin-bottom: 20px;
-    }
-    &__image{
-        max-width: 100%;
-        margin-bottom: 40px;
+        padding: 80px 0;
     }
 }
