--- a/src/index.pug
+++ b/src/index.pug
@@ -2,26 +2,40 @@ html(lang="ru", dir="ltr")
     include chunks/head.pug
     body
         script(src="./js/jquery.min.js")
+        script(src="./js/jquery.nicescroll.min.js")
+        script(src="./js/app.min.js")
         include chunks/header.pug
         .content.content_title
-            svg.content_title__svg(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink")
+            svg.content_title__svg(viewBox="0 0 1920 520" preserveAspectRatio="xMidYMax slice")
                 defs
-                    filter(filterUnits="userSpaceOnUse" id="Filter_0" x="0px" y="0px")
-                        feOffset(in="SourceAlpha" dx="0" dy="3")
-                        feGaussianBlur(result="blurOut" stdDeviation="10")
-                        feFlood(flood-color="rgb(53, 41, 148)" result="floodOut")
-                        feComposite(operator="atop" in="floodOut" in2="blurOut")
+                    filter#shadow_03(filterUnits="objectBoundingBox" height="130%" width="140%" x="-15%" y="-15%")
+                        feGaussianBlur(in="SourceAlpha" result="blur" stdDeviation="5")
+                        feOffset(dx="2" dy="6" in="blur" result="offsetBlurredAlpha")
                         feComponentTransfer
-                            feFuncA(type="linear" slope="0.1")
+                            feFuncA(type="linear" slope="0.2")
                         feMerge
                             feMergeNode
                             feMergeNode(in="SourceGraphic")
                     linearGradient(id="PSgrad_0" x1="0%" x2="0%" y1="100%" y2="0%")
-                        stop(offset="0%" stop-color="rgb(76,28,188)" stop-opacity="1")
-                        stop(offset="100%" stop-color="rgb(51,42,145)" stop-opacity="1")
-                g(filter="url(#Filter_0)")
-                    path(fill-rule="evenodd" d="M1952.000,0.000 L32.000,0.000 C32.000,0.000 32.455,36.594 32.455,62.261 C48.455,87.927 227.239,217.781 370.380,209.418 C543.886,199.297 539.967,119.636 732.975,108.649 C895.861,99.358 895.062,345.632 945.000,414.000 C1039.188,542.961 1243.446,475.024 1406.000,401.000 C1458.954,376.881 1673.736,238.965 1716.000,215.000 C1805.329,164.347 1952.000,205.000 1952.000,205.000 L1952.000,0.000 Z")
-                path(fill="url(#PSgrad_0)" d="M1952.000,0.000 L0.000,0.000 C0.000,0.000 0.000,0.000 0.000,62.261 C48.455,87.927 227.239,217.781 370.380,209.418 C543.886,199.297 539.967,119.636 732.975,108.649 C895.861,99.358 895.062,345.632 945.000,414.000 C1039.188,542.961 1243.446,475.024 1406.000,401.000 C1458.954,376.881 1673.736,238.965 1716.000,215.000 C1805.329,164.347 1952.000,205.000 1952.000,205.000 L1952.000,0.000 Z")
+                        stop(offset="0%" stop-color="#2b238b" stop-opacity="1")
+                        stop(offset="100%" stop-color="#2b16bc" stop-opacity="1")
+                path(fill="url(#PSgrad_0)" filter="url(#shadow_03)" d="M1952.000,0.000 L0.000,0.000 C0.000,0.000 0.000,0.000 0.000,62.261 C48.455,87.927 227.239,217.781 370.380,209.418 C543.886,199.297 539.967,119.636 732.975,108.649 C895.861,99.358 895.062,345.632 945.000,414.000 C1039.188,542.961 1243.446,475.024 1406.000,401.000 C1458.954,376.881 1673.736,238.965 1716.000,215.000 C1805.329,164.347 1952.000,205.000 1952.000,205.000 L1952.000,0.000 Z")
+            .content_title__elements
+                svg.elements(viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet")
+                    defs
+                        filter#shadow(filterUnits="objectBoundingBox" height="130%" width="140%" x="-15%" y="-15%")
+                            feGaussianBlur(in="SourceAlpha" result="blur" stdDeviation="3")
+                            feOffset(dx="5" dy="5" in="blur" result="offsetBlurredAlpha")
+                            feComponentTransfer
+                                feFuncA(type="linear" slope="0.2")
+                            feMerge
+                                feMergeNode
+                                feMergeNode(in="SourceGraphic")
+                        linearGradient#gradient(data-name="gradient" x1="839.1" y1="425.41" x2="1122.56" y2="425.41" gradientUnits="userSpaceOnUse")
+                            stop(offset="0" stop-color="#2a16bc")
+                            stop(offset="1" stop-color="#2f20a0")
+                    g(fill-rule="nonzero")
+                        path(style="fill: url(#gradient); filter: url(#shadow);" d="M10,90c0-44.2,35.8-80,80-80s80,35.8,80,80 M10,90c0,44.2,35.8,80,80,80s80-35.8,80-80 M111.3,90c0,11.7-9.5,21.3-21.3,21.3S68.7,101.7,68.7,90 M111.3,90c0-11.7-9.5-21.3-21.3-21.3S68.7,78.3,68.7,90")
             .container
                 .row
                     .col-xl-6.offset-xl-1.align-items-center
@@ -50,31 +64,40 @@ html(lang="ru", dir="ltr")
                         .toggle-tabs
                             .toggle-tabs__item
                                 .toggle-tabs__item__title Бизнес на любом устройстве 
-                                .toggle-tabs__item__content Создаём сайт, который прекрасно выглядит и функционирует на любом размере экрана: мобильный телефон, планшет и компьютер.
+                                .toggle-tabs__item__content Создаём сайт, который прекрасно выглядит и&nbsp;функционирует на&nbsp;любом размере экрана: мобильный телефон, планшет и&nbsp;компьютер.
                             .toggle-tabs__item
                                 .toggle-tabs__item__title Digital маркетинг
-                                .toggle-tabs__item__content Позволяет управлять вниманием и поведением пользователей
+                                .toggle-tabs__item__content Позволяет управлять вниманием и&nbsp;поведением пользователей
                             .toggle-tabs__item
                                 .toggle-tabs__item__title Концепция
-                                .toggle-tabs__item__content Продуманная и выдержанная направленность, соответствующая тематике сайта
+                                .toggle-tabs__item__content Продуманная и&nbsp;выдержанная направленность, соответствующая тематике сайта
                             .toggle-tabs__item
                                 .toggle-tabs__item__title Воронка продаж
                                 .toggle-tabs__item__content Сайт будет содержать все необходимые блоки для совершения продаж
                             .toggle-tabs__item
                                 .toggle-tabs__item__title Гармоничный контент
-                                .toggle-tabs__item__content Только качественный и релевантный контент может обеспечить большие продажи и первые места в поисковых системах
+                                .toggle-tabs__item__content Только качественный и&nbsp;релевантный контент может обеспечить большие продажи и&nbsp;первые места в&nbsp;поисковых системах
                             .toggle-tabs__item
                                 .toggle-tabs__item__title Работающий дизайн
                                 .toggle-tabs__item__content ---------------------------
         .content.content_portfolio
+            .content_portfolio__elements
+                svg.elements(viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet")
+                    defs
+                        linearGradient#gradient_02(data-name="gradient_02" x1="0" y1="0" x2="1122.56" y2="425.41" gradientUnits="userSpaceOnUse")
+                            stop(offset="0" stop-color="#581cbc")
+                            stop(offset="1" stop-color="#2f20a0")
+                    g(style="fill: url(#gradient_02); filter: url(#shadow);" fill-rule="nonzero")
+                        rect(x="12" y="9.5" width="71" height="160")
+                        rect(x="97" y="9.5" width="71" height="160")
             .container
                 .row
                     .col-xl-5
                         h4.heading Реализованные 
-                            a(href="#") проекты
+                            a.heading__link(href="#") проекты
                     .col-xl-3.offset-xl-2
                         a.content_portfolio__link(href="#") все проекты здесь >  
-                .portfolio
+                .portfolio.scroll-pane.horizontal-only
                     .row  
                         .col-md-3
                             a.portfolio__title(href="#") #Логотип
@@ -92,4 +115,28 @@ html(lang="ru", dir="ltr")
                             a.portfolio__title(href="#") #Реклама
                             a(href="#")
                                 img.portfolio__image(src="./images/03.png")
+        .content.content_contact
+            .container
+                .row
+                    .col-xl-6
+                        h4.heading Нужны клиенты? <br/> Мы знаем как их получить
+                        form.form.form_inline(action="")
+                            input.input-text(type="tel" placeholder="Ваш контактный телефон" value="")
+                            button.btn.btn_primary(type="submit") Хочу больше клиентов
+                    .col-xl-3
+                        .offer How one dull get busy dare far. At principle perfectly by sweetness do. Decisively advantages nor expression unpleasing she led met. Indulgence contrasted sufficient to unpleasant in in insensible favourable. Hard do me sigh with west same lady. So by colonel hearted ferrars. Small for ask shade water manor think men begin. Equally he minutes my hastily. Estate was tended ten boy nearer seemed. Estate was tended ten boy nearer seemed. Up hung mr we give rest half. Their saved linen downs tears son add music. 
+        .content.blog
+            .container
+                .heading Самое актуальное в нашем 
+                    a(href="#") блоге
+                .row.justify-content-between
+                    .col-xl-3.blog__item
+                        a(href="#").blog__item__title 6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте
+                        .blog__item__offer Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.
+                    .col-xl-3.blog__item
+                        a(href="#").blog__item__title О&nbsp;чем нужно помнить, создавая уникальные тексты?
+                        .blog__item__offer Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.
+                    .col-xl-3.blog__item
+                        a(href="#").blog__item__title Продвижение сайта почти бесплатно
+                        .blog__item__offer Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.
         include chunks/footer.pug
