--- a/src/index.pug
+++ b/src/index.pug
@@ -16,7 +16,7 @@ html(lang="ru", dir="ltr")
                         feMerge
                             feMergeNode
                             feMergeNode(in="SourceGraphic")
-                    linearGradient(id="PSgrad_0" x1="0%" x2="0%" y1="100%" y2="0%")
+                    linearGradient(id="PSgrad_0" x1="0%" x2="50%" y1="100%" y2="0%")
                         stop(offset="0%" stop-color="#2b238b" stop-opacity="1")
                         stop(offset="100%" stop-color="#2b16bc" stop-opacity="1")
                 path(fill="url(#PSgrad_0)" filter="url(#shadow_03)" d="M1952.000,0.000 L0.000,0.000 C0.000,0.000 0.000,0.000 0.000,62.261 C48.455,87.927 227.239,217.781 370.380,209.418 C543.886,199.297 539.967,119.636 732.975,108.649 C895.861,99.358 895.062,345.632 945.000,414.000 C1039.188,542.961 1243.446,475.024 1406.000,401.000 C1458.954,376.881 1673.736,238.965 1716.000,215.000 C1805.329,164.347 1952.000,205.000 1952.000,205.000 L1952.000,0.000 Z")
@@ -31,7 +31,7 @@ html(lang="ru", dir="ltr")
                             feMerge
                                 feMergeNode
                                 feMergeNode(in="SourceGraphic")
-                        linearGradient#gradient(data-name="gradient" x1="839.1" y1="425.41" x2="1122.56" y2="425.41" gradientUnits="userSpaceOnUse")
+                        linearGradient#gradient(data-name="gradient" x1="0%" y1="0%" x2="100%" y2="100%" gradientUnits="userSpaceOnUse")
                             stop(offset="0" stop-color="#2a16bc")
                             stop(offset="1" stop-color="#2f20a0")
                     g(fill-rule="nonzero")
@@ -51,7 +51,7 @@ html(lang="ru", dir="ltr")
                         p.offer Занимаемся любимым делом более 5 лет, поэтому не просто делаем и продвигаем сайты. Мы&nbsp;заинтересованы в&nbsp;вашем росте. Поверьте, мы болеем за&nbsp;ваш проект так&nbsp;же, как&nbsp;и&nbsp;вы, поэтому тщательно прорабатываем все детали, чтобы сайт нравился не&nbsp;только вам, но и&nbsp;потребителю. Обращаясь&nbsp;к&nbsp;нам, вы&nbsp;получаете соратников, которые знают короткий путь к&nbsp;сердцам ваших покупателей. 
                         .content__btn
                             a.content__btn__link(href="#") Веб-дизайн
-                            a.content__btn__link(href="#") SEO продвижение
+                            a.content__btn__link(href="#") SEO-продвижение
                             a.content__btn__link(href="#") Контекстная реклама
                             a.content__btn__link(href="#") Разработка сайта
                             a.content__btn__link(href="#") Маркетинг продаж
@@ -79,7 +79,7 @@ html(lang="ru", dir="ltr")
                                 .toggle-tabs__item__content Только качественный и&nbsp;релевантный контент может обеспечить большие продажи и&nbsp;первые места в&nbsp;поисковых системах
                             .toggle-tabs__item
                                 .toggle-tabs__item__title Работающий дизайн
-                                .toggle-tabs__item__content ---------------------------
+                                .toggle-tabs__item__content Создает положительный имидж компании и формирует эффект воздействия на потребителя
         .content.content_portfolio
             .content_portfolio__elements
                 svg.elements(viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet")
@@ -99,19 +99,19 @@ html(lang="ru", dir="ltr")
                         a.content_portfolio__link(href="#") все проекты здесь >  
                 .portfolio.scroll-pane.horizontal-only
                     .row  
-                        .col-md-3
+                        .col-10.col-sm-5.col-lg-3.portfolio__item
                             a.portfolio__title(href="#") #Логотип
                             a(href="#")
                                 img.portfolio__image(src="./images/01.png")
-                        .col-md-3
+                        .col-10.col-sm-5.col-lg-3.portfolio__item
                             a.portfolio__title(href="#") #Веб-разработка
                             a(href="#")
                                 img.portfolio__image(src="./images/02.png")
-                        .col-md-3
+                        .col-10.col-sm-5.col-lg-3.portfolio__item
                             a.portfolio__title(href="#") #Реклама
                             a(href="#")
                                 img.portfolio__image(src="./images/03.png")
-                        .col-md-3
+                        .col-10.col-sm-5.col-lg-3.portfolio__item
                             a.portfolio__title(href="#") #Реклама
                             a(href="#")
                                 img.portfolio__image(src="./images/03.png")
@@ -124,8 +124,8 @@ html(lang="ru", dir="ltr")
                             input.input-text(type="tel" placeholder="Ваш контактный телефон" value="")
                             button.btn.btn_primary(type="submit") Хочу больше клиентов
                     .col-xl-3
-                        .offer How one dull get busy dare far. At principle perfectly by sweetness do. Decisively advantages nor expression unpleasing she led met. Indulgence contrasted sufficient to unpleasant in in insensible favourable. Hard do me sigh with west same lady. So by colonel hearted ferrars. Small for ask shade water manor think men begin. Equally he minutes my hastily. Estate was tended ten boy nearer seemed. Estate was tended ten boy nearer seemed. Up hung mr we give rest half. Their saved linen downs tears son add music. 
-        .content.blog
+                        .offer Многие компании, предлагая свои услуги, говорят о том, какие они классные. Мы в первую очередь думаем о вас и вашем комфорте от сотрудничества с SOHO. Поэтому мы расскажем о том, что вы получите, обратившись к нам.
+        .content.content_blog
             .container
                 .heading Самое актуальное в нашем 
                     a(href="#") блоге
