--- a/src/chunks/header_inside.pug
+++ b/src/chunks/header_inside.pug
@@ -1,19 +1,19 @@
 header.header
     .container
-        .row
-            .col-3.col-xl-1
-                svg.header__logo(viewBox="0 0 80 320" preserveAspectRatio="xMidYMin meet" x="0px" y="0px")
+        .row.align-items-end
+            .col-3.col-lg-2.col-xl-2
+                svg.header__logo.header__logo_inside(viewBox="0 0 320 80" preserveAspectRatio="xMidYMin meet" x="0px" y="0px")
                     g
-                        path.header__logo__path(d="M98,556.26a35.43,35.43,0,1,0,35.43-35.43A35.43,35.43,0,0,0,98,556.26Zm45.28,0a9.84,9.84,0,1,1-9.84-9.84A9.84,9.84,0,0,1,143.29,556.26Z" transform="translate(-98.01 -372.37)")
-                        path.header__logo__path(d="M98,407.81a35.43,35.43,0,1,0,35.43-35.43A35.43,35.43,0,0,0,98,407.81Zm45.28,0a9.84,9.84,0,1,1-9.84-9.84A9.84,9.84,0,0,1,143.29,407.81Z" transform="translate(-98.01 -372.37)")
+                        path.header__logo__path(d="M121.6,1.6C102,1.6,86.2,17.5,86.2,37s15.9,35.4,35.4,35.4S157,56.6,157,37v0C157,17.5,141.2,1.6,121.6,1.6z M121.6,46.9   c-5.4,0-9.8-4.4-9.8-9.8s4.4-9.8,9.8-9.8c5.4,0,9.8,4.4,9.8,9.8C131.4,42.5,127,46.9,121.6,46.9C121.6,46.9,121.6,46.9,121.6,46.9   L121.6,46.9z")
+                        path.header__logo__path(d="M270.1,1.6c-19.6,0-35.4,15.9-35.4,35.4c0,19.6,15.9,35.4,35.4,35.4c19.6,0,35.4-15.9,35.4-35.4v0   C305.5,17.5,289.6,1.6,270.1,1.6z M270.1,46.9c-5.4,0-9.8-4.4-9.8-9.8s4.4-9.8,9.8-9.8s9.8,4.4,9.8,9.8l0,0   C279.9,42.5,275.5,46.9,270.1,46.9C270.1,46.9,270.1,46.9,270.1,46.9L270.1,46.9z")
                         g
-                            rect.header__logo__path(y="81.23" width="33.49" height="56.69")
-                            rect.header__logo__path(x="38.35" y="81.23" width="32.51" height="56.69")
-                        path.header__logo__path(d="M102.82,544.65" transform="translate(-98.01 -372.37)")
+                            rect.header__logo__path(x="167.6" y="1.6" width="56.7" height="33.5")
+                            rect.header__logo__path(x="167.6" y="40" width="56.7" height="32.5")
+                        path.header__logo__path(d="M133.2,1.6")
                         g
-                            path.header__logo__path(d="M101,653.92c-0.64-1.9.46-3.5,1.78-5.11,6.25-7.65,12.43-15.35,18.68-23,4.31-5.28,8.58-10.61,13.08-15.72,4-4.52,8.91-7.55,15.22-7.48a21,21,0,0,1,18.37,10.09,23.65,23.65,0,0,1,3.55,13.46,4.84,4.84,0,0,1-.85,2.63c-6.44,8.88-12.85,17.79-19.47,26.54A82.76,82.76,0,0,1,136,671.38a21.49,21.49,0,0,1-18.55,4.23,20.25,20.25,0,0,1-12.74-9.28A22.24,22.24,0,0,1,101,653.92Z" transform="translate(-98.01 -372.37)")
-                            path.header__logo__path(d="M171.57,637.64v37.57H141.65Z" transform="translate(-98.01 -372.37)")
-                            path.header__logo__path(d="M100.89,607.18h28.53l-28.53,34.69V607.18Z" transform="translate(-98.01 -372.37)")
+                            path.header__logo__path(d="M23.9,1.8c1.9-0.6,3.5,0.5,5.1,1.8c7.7,6.3,15.3,12.4,23,18.7c5.3,4.3,10.6,8.6,15.7,13.1c4.5,4,7.5,8.9,7.5,15.2    C75.4,58,71.6,65,65.2,68.9c-4,2.5-8.7,3.7-13.5,3.6c-0.9,0-1.9-0.3-2.6-0.9c-8.9-6.4-17.8-12.9-26.5-19.5    c-6-4.4-11.4-9.5-16-15.4c-4.2-5.2-5.8-12-4.2-18.6c1.2-5.3,4.6-9.9,9.3-12.7C15.2,3.1,19.5,1.8,23.9,1.8z")
+                            path.header__logo__path(d="M40.2,72.4H2.7V42.4L40.2,72.4z")
+                            path.header__logo__path(d="M70.7,1.7v28.5L36,1.7H70.7z")
             .col-7.col-xl-2
                 a.header__email(href="mailto:work@websoho.ru") work@websoho.ru
     svg.header__nav#header__nav(version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve")
