--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -60,20 +60,21 @@ a{
         margin: 60px 0 50px;
         &__link{
             display: inline-block;
-            font-size: 16px;
+            font-size: 14px;
             font-weight: 700;
             text-align: center;
+            text-transform: uppercase;
             border-radius: 30px;
-            padding: 14px 40px 16px; 
+            padding: 15px 30px 16px; 
 
             margin-right: 15px;
             margin-bottom: 15px;
 
-            color: #fff;
-            background: linear-gradient( -45deg, rgb(50,43,143) 0%, rgb(63,36,166) 62%, rgb(76,28,188) 100%);
+            color: $grey;
+            background: linear-gradient(-45deg, #d4d4d4 0%, #d0cbe3 62%, #d5c3ff 100%);
 
             &:hover{
-                color: $blue;
+                color: $darkblue;
                 text-decoration: none;
             }
         }
@@ -158,6 +159,10 @@ a{
         padding: 340px 0 100px;
         margin-top: -300px;
         z-index: 1;
+        &.inside{
+            margin-top: 0;
+            padding: 100px 0;
+        }
         .heading{
             font-size: 46px;
             line-height: 52px;
@@ -187,9 +192,27 @@ a{
             }
         }
     }
-    &.blog{
+    &_blog{
         background: #272727;
         color: #fff;
         padding: 80px 0;
+        .heading{
+            font-size: 28px;
+            margin-bottom: 40px;
+        }
+        .blog__item{
+            &__title{
+                color: #fff;
+                font-size: 22px;
+                font-weight: 600;
+                margin-bottom: 20px;
+            }
+            &__offer{
+                font-size: 14px;
+                color: $lightgrey;
+            }
+        }
     }
 }
+
+@import "media.scss";
